# hutscape.github.io

./: .gitignore  CNAME  Gemfile  LICENSE.md  Makefile  README.md  _config.yml  about.md  calculators.md  checklists.md  checkout.md  components.md  credits.md  index.md  package-lock.json  references.md  tools.md  tutorials.md
_checklists/: bom.md  buying.md  datasheets.md  footprints.md  layout.md  manufacturing.md  networking.md  parts.md  schedule.md  schematic.md  standards.md  symbols.md  versioning.md
_components/: DHT22-sensor.md  ble-uvi.md  blinky-arduino.md  blinky-esp8266.md  blinky-m0.md  blinky-nrf52.md  cycle-rgb-led.md  d-flipflop.md  display-humidity-bar-led.md  display-sensors.md  display-uv-lipo.md  display-uv.md  eeprom-emulation-samd21.md  eeprom-esp8266.md  eeprom-int-arduino.md  eeprom-string-arduino.md  erase-wifi-credentials.md  flash-storage-samd21.md  form-page-ap.md  ifttt-get.md  ifttt-post-data.md  ir-emitter.md  ir-raw-emit.md  ir-raw-receive.md  ir-receiver.md  logic-analyzer-i2c.md  logic-analyzer-signal.md  logic-analyzer-uart.md  long-sleep-or-button-press.md  long-sleep.md  lora-duplex-a.md  lora-duplex-b.md  lora-rx.md  lora-tx.md  lorawan-duplex-a.md  lorawan-duplex-b.md  lorawan-rx.md  lorawan-tx.md  max-deep-sleep.md  max-sleep-ping.md  (+34 more)
_data/: projects.yml
_includes/: first-tool.html  footer.html  google-analytics.html  head.html  header.html  menu-mobile.html  navbar-tools.html  navbar.html  search.html
_layouts/: checklists.html  components.html  default.html  home.html  page.html  post.html  references.html  tool.html  tools.html  tutorials.html
_posts/: 2019-04-11-welcome-to-jekyll.md  2019-04-22-welcome-to-jekyll.md
_references/: 74hc595-pinout.md  Si7021-datasheet.md  esp12e-pinout.md  irml2246-datasheet.md  nrf52-bluefruit-adafruit-schematic.md  rgb-led-datasheet.md  si7021-breakout-schematic.md  sn74hc595-datasheet.md  switch-spdt-mechanical.md  veml6075-breakout-footprint.md  veml6075-breakout-schematic.md  veml6075-datasheet.md  wemos-d1-mini-pinout.md  wemos-d1-mini-schematic.md
_sass/: hutscape.scss
_tools/: books.md  coding.md  hardware.md  videography.md
_tutorials/: Makefile  access-point-arduino-esp32c3.md  arduino-bootloader-samd21g.md  arduino-debug-trace.md  arduino-debug.md  arduino-trace.md  bitmask-arduino-uno.md  ble-uvi.md  blinky-arduino-esp32c3.md  blinky-arduino-esp32s3.md  blinky-arduino.md  blinky-esp-idf-esp32c3.md  blinky-esp-idf-esp32s3.md  blinky-esp32-t-beam.md  blinky-esp32c3.md  blinky-esp32s3-platformio.md  blinky-esp32s3.md  blinky-esp8266.md  blinky-esphome-esp32c3.md  blinky-esphome-esp32s3.md  blinky-m0.md  blinky-micropython-esp32c3.md  blinky-micropython-esp32s3.md  blinky-nano33-ble-sense.md  blinky-nrf52.md  blinky-pico.md  blinky-platformio-esp32c3.md  blinky-platformio-esp32s3.md  blinky-rust-esp32c3.md  blinky-rust-esp32s3.md  blinky-samd21g.md  blinky-tasmota-esp32c3.md  blinky-tasmota-esp32s3.md  connect-wifi-arduino-esp32c3.md  connect-wifi-arduino-esp32s3.md  (+130 more)
_tutorials/code/blinky-rust-esp32c3/: .gitignore  Cargo.toml  Makefile
_tutorials/code/blinky-rust-esp32c3/.cargo/: config.toml
_tutorials/code/blinky-rust-esp32c3/src/: main.rs
_tutorials/code/blinky-rust-esp32s3/: Cargo.toml
_tutorials/code/blinky-rust-esp32s3/src/: main.rs
_tutorials/hello-rust-esp32s3/: Cargo.toml
_tutorials/hello-rust-esp32s3/.cargo/: config.toml
_tutorials/hello-rust-esp32s3/src/: main.rs
_tutorials/pico-i2c/: CMakeLists.txt  pico-i2c.c
_tutorials/pico-neopixel/: CMakeLists.txt  Makefile  pico-neopixel.c
_tutorials/pico-pio-i2c/: CMakeLists.txt  pico-pio-i2c.c  pio_i2c.c
(+329 files in other folders)
