[package]
name = "blinky-rust-esp32c3"
version = "0.1.0"
authors = ["Sayanee <sayanee@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.33.2", features = ["binstart"] }
esp-idf-hal = "0.42"

[build-dependencies]
embuild = "0.31.3"
